--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Modules/m1_orientation_client"]
 	path = Modules/m1_orientation_client
 	url = git@github.com:Mach1Studios/m1_orientation_client.git
+[submodule "Modules/m1-sdk"]
+	path = Modules/m1-sdk
+	url = git@github.com:Mach1Studios/m1-sdk.git
