expanded on macros to capture more cases and applied to cmake as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ else()
     message("Warning: Did not find additional JUCE deps submodule. Please add the appropriate SDKs manually.")
 endif()
 
-OPTION(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT "Compiles a single I/O static setup pugin, requires setting CONFIG_IO for example: `-DCONFIG_IO=1,8`; n,N where n=number_of_input_channels and N=number_of_output_channels" OFF)
+OPTION(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT "Compiles a single I/O static setup pugin, requires setting CONFIG_IO for example: `-DINPUTS=1 -DOUTPUTS=8`; n,N where n=number_of_input_channels and N=number_of_output_channels" OFF)
+IF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
+    MESSAGE("Make sure the 'INPUTS' and 'OUTPUTS' are set!")
+ENDIF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
+
 OPTION(BUILD_STREAMING_PANNER_PLUGIN "Compiles the plugin UI and processing code for external spatial audio processing" OFF) # Disabled by default
 OPTION(BUILD_DYNAMIC_IO_PLUGIN_MODE "Compiles the plugin UI and processing code for re-declarable I/O" ON) # Enabled by default
 OPTION(BUILD_ITD_PARAMETERS "Adds the experimental ITD processing parameters and UI" OFF) # Disabled by default
@@ -19,10 +23,17 @@ OPTION(BUILD_VST3 "Compile VST3 plugin type" ON) # Enabled by default
 SET(LBRACKET_LITERAL "{")
 SET(RBRACKET_LITERAL "}")
 
-IF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT && CONFIG_IO)
-    ADD_DEFINITIONS(JucePlugin_PreferredChannelConfig "${LBRACKET_LITERAL}${CONFIG_IO}${RBRACKET_LITERAL}")
-    # TODO: Change output name as 
+IF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT && (INPUTS GREATER 0 && OUTPUTS GREATER 0))
+    SET(STATIC_PANNER_IO "(${INPUTS}-${OUTPUTS})")
+    SET(CUSTOM_BUDLE_ID "com.mach1.panner.${INPUTS}.${OUTPUTS}")
+    SET(CUSTOM_PLUGIN_CODE "MP${INPUTS}${OUTPUTS}")
+    ADD_DEFINITIONS(JucePlugin_PreferredChannelConfig "${LBRACKET_LITERAL}${INPUTS},${OUTPUTS}${RBRACKET_LITERAL}")
+    # TODO: Change output name to reflect
+ELSEIF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT && !(INPUTS GREATER 0 && OUTPUTS GREATER 0))
+    MESSAGE(SEND_ERROR "INPUTS and OUTPUTS are not defined!")
 ELSE()
+    SET(CUSTOM_BUDLE_ID "com.mach1.panner")
+    SET(CUSTOM_PLUGIN_CODE "M1PN")
     IF(BUILD_STREAMING_PANNER_PLUGIN)
         ADD_DEFINITIONS(-DSTREAMING_PANNER_PLUGIN)
     ENDIF(BUILD_STREAMING_PANNER_PLUGIN)
@@ -60,28 +71,28 @@ juce_add_plugin(${CMAKE_PROJECT_NAME}
                 VERSION "2.0.0"
                 COMPANY_NAME "Mach1"
                 PLUGIN_MANUFACTURER_CODE "Mac1"
-                PLUGIN_CODE "M1PN"
+                PLUGIN_CODE ${CUSTOM_PLUGIN_CODE}
                 FORMATS ${FORMATS}
                 VST3_CATEGORIES "Spatial Surround Up-Downmix"
                 AAX_CATEGORY "AAX_ePlugInCategory_None"
                 AU_MAIN_TYPE "kAudioUnitType_Effect"
                 COMPANY_WEBSITE "https://mach1.tech"
                 COMPANY_EMAIL "whatsup@mach1.tech"
-                BUNDLE_ID "com.mach1.panner"
-                PLUGIN_NAME "${CMAKE_PROJECT_NAME}"
-                PRODUCT_NAME "${CMAKE_PROJECT_NAME}")
+                BUNDLE_ID ${CUSTOM_BUDLE_ID}
+                PLUGIN_NAME "${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO}"
+                PRODUCT_NAME "${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO}")
 
 # add the sources
 add_subdirectory(Resources)
 add_subdirectory(Source)
 
 # add required flags
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE juce::juce_recommended_warning_flags juce::juce_recommended_config_flags juce::juce_recommended_lto_flags)
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE juce::juce_audio_basics juce::juce_audio_devices juce::juce_audio_formats juce::juce_audio_plugin_client juce::juce_audio_processors juce::juce_audio_utils juce::juce_core juce::juce_cryptography juce::juce_data_structures juce::juce_dsp juce::juce_events juce::juce_graphics juce::juce_gui_basics juce::juce_gui_extra juce::juce_opengl juce::juce_osc juce::juce_product_unlocking juce_murka m1_orientation_client)
-target_compile_definitions(${CMAKE_PROJECT_NAME} 
+target_link_libraries(${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO} PRIVATE juce::juce_recommended_warning_flags juce::juce_recommended_config_flags juce::juce_recommended_lto_flags)
+target_link_libraries(${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO} PRIVATE juce::juce_audio_basics juce::juce_audio_devices juce::juce_audio_formats juce::juce_audio_plugin_client juce::juce_audio_processors juce::juce_audio_utils juce::juce_core juce::juce_cryptography juce::juce_data_structures juce::juce_dsp juce::juce_events juce::juce_graphics juce::juce_gui_basics juce::juce_gui_extra juce::juce_opengl juce::juce_osc juce::juce_product_unlocking juce_murka m1_orientation_client)
+target_compile_definitions(${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO}
     PUBLIC 
     JUCE_WEB_BROWSER=0)
-juce_generate_juce_header(${CMAKE_PROJECT_NAME})
+juce_generate_juce_header(${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO})
 
 # setup the copying to the output folder
 if (APPLE)
@@ -91,6 +102,6 @@ elseif(WIN32)
 endif()
 
 foreach(FORMAT ${FORMATS})
-    get_target_property(ARTEFACTS_DIR ${CMAKE_PROJECT_NAME}${FORMAT} LIBRARY_OUTPUT_DIRECTORY)
-    add_custom_command(TARGET ${CMAKE_PROJECT_NAME}_${FORMAT} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${ARTEFACTS_DIR} ${COPY_FOLDER})
+    get_target_property(ARTEFACTS_DIR ${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO}${FORMAT} LIBRARY_OUTPUT_DIRECTORY)
+    add_custom_command(TARGET ${CMAKE_PROJECT_NAME}${STATIC_PANNER_IO}_${FORMAT} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${ARTEFACTS_DIR} ${COPY_FOLDER})
 endforeach()
