juce added as versioned submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Modules/m1-sdk"]
 	path = Modules/m1-sdk
 	url = git@github.com:Mach1Studios/m1-sdk.git
+[submodule "JUCE"]
+	path = JUCE
+	url = git@github.com:juce-framework/JUCE.git
