more cmake support for compiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,24 @@
-cmake_minimum_required(VERSION 3.13.0)
-project(M1-Panner VERSION 2.0.0)
+cmake_minimum_required(VERSION 3.15.0)
+file(STRINGS VERSION CURRENT_VERSION)
+project(M1-Panner VERSION ${CURRENT_VERSION})
+
+### IDE Generator pre-config ###
+# Xcode: Disable automatic build scheme generation globally.
+#        Instead, we explicitely specify which targets require schemes.
+set(CMAKE_XCODE_GENERATE_SCHEME OFF)
+# Enable to build universal binaries on macOS, increasing build time
+# This only affects local builds, GitHub actions always builds Universals
+set(CMAKE_OSX_ARCHITECTURES arm64 x86_64)
+set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Support macOS down to High Sierra")
+# IDEs:  Enable grouping of source files into folders in IDEs.
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+# IDEs:  Create a folder in the IDE with the JUCE Module code.
+option(JUCE_ENABLE_MODULE_SOURCE_GROUPS "Show all module sources in IDE projects" ON)
+
+# add JUCE
 add_subdirectory(JUCE)
+# add custom modules
+add_subdirectory(Modules)
 
 IF(IS_DIRECTORY ${PROJECT_SOURCE_DIR}/JUCE_deps)
     set(AAX_PATH "JUCE_deps/AAX_SDK_2p3p2")
@@ -10,105 +28,175 @@ ELSE()
     message("Warning: Did not find additional JUCE deps submodule. Please add the appropriate SDKs manually.")
 ENDIF()
 
-OPTION(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT "Compiles a single I/O static setup pugin, requires setting CONFIG_IO for example: `-DINPUTS=1 -DOUTPUTS=8`; n,N where n=number_of_input_channels and N=number_of_output_channels" OFF)
-IF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
-    MESSAGE("Make sure the 'INPUTS' and 'OUTPUTS' are set!")
-ENDIF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
+option(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT "Compiles a single I/O static setup pugin, requires setting CONFIG_IO for example: `-DINPUTS=1 -DOUTPUTS=8`; n,N where n=number_of_input_channels and N=number_of_output_channels" OFF)
+option(BUILD_STREAMING_PANNER_PLUGIN "Compiles the plugin UI and processing code for external spatial audio processing" OFF) # Disabled by default
+option(BUILD_DYNAMIC_IO_PLUGIN_MODE "Compiles the plugin UI and processing code for re-declarable I/O" OFF) # Enabled by default
+option(BUILD_ITD_PARAMETERS "Adds the experimental ITD processing parameters and UI" OFF) # Disabled by default
+option(BUILD_VST3 "Compile VST3 plugin type" OFF) # Enabled by default
 
-OPTION(BUILD_STREAMING_PANNER_PLUGIN "Compiles the plugin UI and processing code for external spatial audio processing" OFF) # Disabled by default
-OPTION(BUILD_DYNAMIC_IO_PLUGIN_MODE "Compiles the plugin UI and processing code for re-declarable I/O" OFF) # Enabled by default
-OPTION(BUILD_ITD_PARAMETERS "Adds the experimental ITD processing parameters and UI" OFF) # Disabled by default
-OPTION(BUILD_VST3 "Compile VST3 plugin type" OFF) # Enabled by default
-
-# These are used to re-apply brackets for the JucePlugin_PreferredChannelConfig
-SET(LBRACKET_LITERAL "{")
-SET(RBRACKET_LITERAL "}")
+# These are used to re-apply brackets for the JucePlugin_PreferredChannelConfigurations
+set(LBRACKET_LITERAL "{")
+set(RBRACKET_LITERAL "}")
 
 IF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT AND (INPUTS GREATER 0 AND OUTPUTS GREATER 0))
-    SET(PANNER_IO "(${INPUTS}-${OUTPUTS})")
-    SET(PANNER_NAME "${CMAKE_PROJECT_NAME}${PANNER_IO}")
-    SET(CUSTOM_BUNDLE_ID "com.mach1.panner.i${INPUTS}o${OUTPUTS}")
-    SET(CUSTOM_PLUGIN_CODE "MP${INPUTS}${OUTPUTS}")
-    ADD_DEFINITIONS(JucePlugin_PreferredChannelConfig "${LBRACKET_LITERAL}${INPUTS},${OUTPUTS}${RBRACKET_LITERAL}")
+    set(PANNER_IO "_i${INPUTS}-o${OUTPUTS}")
+    set(PANNER_NAME "${CMAKE_PROJECT_NAME}${PANNER_IO}")
+    set(CUSTOM_BUNDLE_ID "com.mach1.panner.i${INPUTS}o${OUTPUTS}")
+    set(CUSTOM_PLUGIN_CODE "MP${INPUTS}${OUTPUTS}")
+    remove_definitions(-DSTREAMING_PANNER_PLUGIN -DDYNAMIC_IO_PLUGIN_MODE)
+    #add_definitions(JucePlugin_PreferredChannelConfigurations "${LBRACKET_LITERAL}${INPUTS},${OUTPUTS}${RBRACKET_LITERAL}")
     # TODO: Change output name to reflect
 ELSEIF(BUILD_WITH_CUSTOM_CHANNEL_LAYOUT AND NOT (INPUTS GREATER 0 AND OUTPUTS GREATER 0))
-    MESSAGE(SEND_ERROR "INPUTS and OUTPUTS are not defined!")
+    message(SEND_ERROR "INPUTS and OUTPUTS are not defined!")
 ELSE()
-    SET(PANNER_NAME "${CMAKE_PROJECT_NAME}")
-    SET(CUSTOM_BUNDLE_ID "com.mach1.panner")
-    SET(CUSTOM_PLUGIN_CODE "M1PN")
+    set(PANNER_NAME "${CMAKE_PROJECT_NAME}")
+    set(CUSTOM_BUNDLE_ID "com.mach1.panner")
+    set(CUSTOM_PLUGIN_CODE "M1PN")
     IF(BUILD_STREAMING_PANNER_PLUGIN)
-        ADD_DEFINITIONS(-DSTREAMING_PANNER_PLUGIN)
+        add_definitions(-DSTREAMING_PANNER_PLUGIN)
+        remove_definitions(-DBUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
+        remove_definitions(-DDYNAMIC_IO_PLUGIN_MODE)
     ENDIF(BUILD_STREAMING_PANNER_PLUGIN)
 
     IF(BUILD_DYNAMIC_IO_PLUGIN_MODE)
-        ADD_DEFINITIONS(-DDYNAMIC_IO_PLUGIN_MODE)
+        add_definitions(-DDYNAMIC_IO_PLUGIN_MODE)
+        remove_definitions(-DBUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
+        remove_definitions(-DSTREAMING_PANNER_PLUGIN)
     ENDIF(BUILD_DYNAMIC_IO_PLUGIN_MODE)
 ENDIF()
 
 IF(BUILD_ITD_PARAMETERS)
-    ADD_DEFINITIONS(-DITD_PARAMETERS)
+    add_definitions(-DITD_PARAMETERS)
 ENDIF(BUILD_ITD_PARAMETERS)
 
 # check which formats we want to build
+# Valid formats: AAX VST VST3 AU // Not yet supported: Unity AUv3 Standalone CLAP
 IF(BUILD_VST3)
     list(APPEND FORMATS "VST3")
 ENDIF(BUILD_VST3)
 
 IF(BUILD_VST2 AND VST2_PATH)
-    list(APPEND FORMATS "VST2")
+    message("-- VST2 SDK Found: ${VST2_PATH}")
+    list(APPEND FORMATS "VST")
     juce_set_vst2_sdk_path(${VST2_PATH})
-ENDIF()
-
-IF(BUILD_AAX AND AAX_PATH)
-    list(APPEND FORMATS "AAX")
-    juce_set_aax_sdk_path(${AAX_PATH})
 ENDIF()
 
 IF(BUILD_AU AND APPLE)
     list(APPEND FORMATS "AU")
 ENDIF()
 
+IF(BUILD_AAX AND AAX_PATH)
+    message("-- AAX SDK Found: ${AAX_PATH}")
+    list(APPEND FORMATS "AAX")
+    juce_set_aax_sdk_path(${AAX_PATH})
+    remove_definitions(-DBUILD_WITH_CUSTOM_CHANNEL_LAYOUT)
+    # WARNING: Be careful to not mix custom channel i/o builds with AAX
+ENDIF()
+
 # add the plugin targets
 juce_add_plugin(${PANNER_NAME}
-                VERSION "2.0.0"
+                VERSION ${CURRENT_VERSION}
                 COMPANY_NAME "Mach1"
+                COMPANY_WEBSITE "https://mach1.tech"
+                COMPANY_EMAIL "whatsup@mach1.tech"
                 PLUGIN_MANUFACTURER_CODE "Mac1"
                 PLUGIN_CODE ${CUSTOM_PLUGIN_CODE}
                 FORMATS ${FORMATS}
                 VST3_CATEGORIES "Spatial Surround Up-Downmix"
                 AAX_CATEGORY "AAX_ePlugInCategory_None"
                 AU_MAIN_TYPE "kAudioUnitType_Effect"
-                COMPANY_WEBSITE "https://mach1.tech"
-                COMPANY_EMAIL "whatsup@mach1.tech"
                 BUNDLE_ID ${CUSTOM_BUNDLE_ID}
                 PLUGIN_NAME ${PANNER_NAME}
-                PRODUCT_NAME ${PANNER_NAME})
+                PRODUCT_NAME ${PANNER_NAME}
+                IS_SYNTH FALSE)
+
+# Set the C++ language standard requirenment for the "shared code" library target.
+# Setting this to PUBLIC ensures that all dependent targets will inherit the specified C++ standard.
+target_compile_features("${PANNER_NAME}" PUBLIC cxx_std_17)
+# Disable compiler extensions for the project targets (e.g. use -std=c++17 instead of -std=gnu++17).
+get_property(project_targets DIRECTORY "${PROJECT_SOURCE_DIR}" PROPERTY BUILDSYSTEM_TARGETS)
+set_target_properties(${project_targets} PROPERTIES CXX_EXTENSIONS OFF)
 
 # add the sources
-add_subdirectory(Resources)
 add_subdirectory(Source)
+set_target_properties("${PANNER_NAME}" PROPERTIES FOLDER "")
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/Source PREFIX "" FILES ${SourceFiles})
+
+add_subdirectory(Resources)
+
+# Required for Linux happiness:
+# See https://forum.juce.com/t/loading-pytorch-model-using-binarydata/39997/2
+set_target_properties(Resources PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+
+# This cleans up the folder organization on Xcode.
+# It tucks the Plugin varieties into a "Targets" folder and generate an Xcode Scheme manually
+# Xcode scheme generation is turned off globally to limit noise from other targets
+# The non-hacky way of doing this is via the global PREDEFINED_TARGETS_FOLDER property
+# However that doesn't seem to be working in Xcode
+# Not all plugin types (au, vst) available on each build type (win, macos, linux)
+foreach(target ${FORMATS} "All")
+    if(TARGET ${PANNER_NAME}_${target})
+        set_target_properties(${PANNER_NAME}_${target} PROPERTIES
+            # Tuck the actual plugin targets into a folder where they won't bother us
+            FOLDER "Targets"
+
+            # MacOS only: Sets the default executable that Xcode will open on build
+            # For this exact path to to work, manually build the AudioPluginHost.xcodeproj in the JUCE subdir
+            #XCODE_SCHEME_EXECUTABLE "${PROJECT_SOURCE_DIR}/JUCE/extras/AudioPluginHost/Builds/MacOSX/build/Debug/AudioPluginHost.app"
+
+            # Let us build the target in Xcode
+            XCODE_GENERATE_SCHEME ON)
+    endif()
+endforeach()
+set_target_properties(Resources PROPERTIES FOLDER "Targets")
 
 # add required flags
-target_link_libraries(${PANNER_NAME} PRIVATE juce::juce_recommended_warning_flags juce::juce_recommended_config_flags juce::juce_recommended_lto_flags)
-target_link_libraries(${PANNER_NAME} PRIVATE juce::juce_audio_basics juce::juce_audio_devices juce::juce_audio_formats juce::juce_audio_plugin_client juce::juce_audio_processors juce::juce_audio_utils juce::juce_core juce::juce_cryptography juce::juce_data_structures juce::juce_dsp juce::juce_events juce::juce_graphics juce::juce_gui_basics juce::juce_gui_extra juce::juce_opengl juce::juce_osc juce::juce_product_unlocking juce_murka m1_orientation_client)
+juce_generate_juce_header(${PANNER_NAME})
 target_compile_definitions(${PANNER_NAME}
     PUBLIC 
-    JUCE_WEB_BROWSER=0)
-juce_generate_juce_header(${PANNER_NAME})
+    JUCE_WEB_BROWSER=0
+    JUCE_USE_CURL=0
+    JUCE_VST3_CAN_REPLACE_VST2=0)
+target_link_libraries(${PANNER_NAME} PRIVATE juce::juce_audio_basics juce::juce_audio_devices juce::juce_audio_formats juce::juce_audio_plugin_client juce::juce_audio_processors juce::juce_audio_utils juce::juce_core juce::juce_cryptography juce::juce_data_structures juce::juce_dsp juce::juce_events juce::juce_graphics juce::juce_gui_basics juce::juce_gui_extra juce::juce_opengl juce::juce_osc juce::juce_product_unlocking juce_murka)
+target_link_libraries(${PANNER_NAME} PRIVATE Resources PUBLIC juce::juce_recommended_warning_flags juce::juce_recommended_config_flags juce::juce_recommended_lto_flags)
 
 # definitions to replace the `JucePluginDefines.h`
-SET(JucePlugin_Name ${PANNER_NAME})
-SET(JucePlugin_Desc ${PANNER_NAME})
+set(JucePlugin_Name ${PANNER_NAME})
+set(JucePlugin_Desc ${PANNER_NAME})
 
-# setup the copying to the output folder
-IF(APPLE)
-    set(COPY_FOLDER ${CMAKE_SOURCE_DIR}/Builds/MacOSX)
-ELSEIF(WIN32)
-    set(COPY_FOLDER ${CMAKE_SOURCE_DIR}/Builds/VisualStudio2015)
-ENDIF()
+### IDE Generator post-config ###
+# IDEs:  Move the "shared code" source group (main target) out of the "Targets" folder
+#        to the top level.
+set_target_properties("${PANNER_NAME}" PROPERTIES FOLDER "")
 
-FOREACH(FORMAT ${FORMATS})
-    get_target_property(ARTEFACTS_DIR ${PANNER_NAME}_${FORMAT} LIBRARY_OUTPUT_DIRECTORY)
-    add_custom_command(TARGET ${PANNER_NAME}_${FORMAT} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${ARTEFACTS_DIR} ${COPY_FOLDER})
-ENDFOREACH()
+#   If JuceHeader.h is generated, remove it from the source file list and handle it individually.
+get_target_property(juce_library_code "${PANNER_NAME}" JUCE_GENERATED_SOURCES_DIRECTORY)
+set(juce_header "${juce_library_code}/JuceHeader.h")
+
+#   Place JuceHeader.h and the associated CMake Rule file into a "JUCE Library Code" folder.
+source_group("JUCE Library Code" FILES "${juce_header}")
+source_group("JUCE Library Code/CMake Rules" FILES "${juce_header}.rule")
+
+# add M1-SDK
+set(MACH1SPATIAL_LIBS_PATH "Modules/m1-sdk/mach1spatial-libs")
+if(APPLE)
+    set(MACH1SPATIAL_LIBS_UNIX_PATH ${MACH1SPATIAL_LIBS_PATH}/xcode)
+else()
+    set(MACH1SPATIAL_LIBS_UNIX_PATH ${MACH1SPATIAL_LIBS_PATH}/linux)
+endif()
+# link libraries
+find_library(MACH1ENCODE_LIBRARY 
+    NAMES Mach1EncodeCAPI libMach1EncodeCAPI libMach1EncodeCAPI.a libMach1EncodeCAPI.so libMach1EncodeCAPI.lib
+    PATHS ${MACH1SPATIAL_LIBS_UNIX_PATH}/lib ${MACH1SPATIAL_LIBS_PATH}/windows-x86 ${MACH1SPATIAL_LIBS_PATH}/windows-x86_64
+)
+set(MACH1SPATIAL_INCLUDES ${MACH1SPATIAL_LIBS_PATH}/linux/include ${MACH1SPATIAL_LIBS_PATH}/linux/include/M1DSP ${MACH1SPATIAL_LIBS_PATH}/xcode/include ${MACH1SPATIAL_LIBS_PATH}/xcode/include/M1DSP ${MACH1SPATIAL_LIBS_PATH}/windows-x86/include ${MACH1SPATIAL_LIBS_PATH}/windows-x86/include/M1DSP)
+include_directories(${MACH1SPATIAL_INCLUDES})
+target_link_libraries(${PANNER_NAME} PRIVATE ${MACH1ENCODE_LIBRARY})
+target_sources(${PANNER_NAME} PRIVATE ${MACH1SPATIAL_LIBS_PATH}/xcode/include/Mach1Encode.cpp)
+
+# Color our warnings and errors
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+   add_compile_options(-fdiagnostics-color=always)
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+   add_compile_options(-fcolor-diagnostics)
+endif()
