changed cmake var name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,13 +33,16 @@ option(BUILD_VST3 "Compile VST3 plugin type" OFF)
 option(BUILD_VST "Compile VST2 plugin type" OFF)
 option(BUILD_AAX "Compile AAX plugin type" OFF)
 option(BUILD_AU "Compile AU plugin type" OFF)
+option(BUILD_AUV3 "Compile AUv3 plugin type" OFF)
+option(BUILD_UNITY "Compile Unity plugin type" OFF)
+option(BUILD_STANDALONE "Compile Standalone app of plugin" OFF)
 
 # These are used to re-apply brackets for the JucePlugin_PreferredChannelConfigurations
 set(LBRACKET_LITERAL "{")
 set(RBRACKET_LITERAL "}")
 
 # DYNAMIC_IO_PLUGIN_MODE or STREAMING_PANNER_PLUGIN or AAX/RTAS
-set(PANNER_NAME "${CMAKE_PROJECT_NAME}")
+set(PLUGIN_NAME "${CMAKE_PROJECT_NAME}")
 set(CUSTOM_BUNDLE_ID "com.mach1.panner")
 set(CUSTOM_PLUGIN_CODE "M1PN")
 
@@ -86,7 +89,7 @@ endif()
 message(STATUS "Plugin targets: ${FORMATS}")
 
 # add the plugin targets
-juce_add_plugin(${PANNER_NAME}
+juce_add_plugin(${PLUGIN_NAME}
                 VERSION ${CURRENT_VERSION}
                 COMPANY_NAME "Mach1"
                 COMPANY_WEBSITE "https://mach1.tech"
@@ -98,12 +101,12 @@ juce_add_plugin(${PANNER_NAME}
                 AAX_CATEGORY "AAX_ePlugInCategory_None"
                 AU_MAIN_TYPE "kAudioUnitType_Effect"
                 BUNDLE_ID ${CUSTOM_BUNDLE_ID}
-                PLUGIN_NAME ${PANNER_NAME}
-                PRODUCT_NAME ${PANNER_NAME}
+                PLUGIN_NAME ${PLUGIN_NAME}
+                PRODUCT_NAME ${PLUGIN_NAME}
                 IS_SYNTH FALSE
                 COPY_PLUGIN_AFTER_BUILD TRUE)
 
-target_compile_definitions(${PANNER_NAME}
+target_compile_definitions(${PLUGIN_NAME}
     PUBLIC 
     JUCE_WEB_BROWSER=0
     JUCE_USE_CURL=0
@@ -112,14 +115,14 @@ target_compile_definitions(${PANNER_NAME}
 
 # Set the C++ language standard requirenment for the "shared code" library target.
 # Setting this to PUBLIC ensures that all dependent targets will inherit the specified C++ standard.
-target_compile_features("${PANNER_NAME}" PUBLIC cxx_std_17)
+target_compile_features("${PLUGIN_NAME}" PUBLIC cxx_std_17)
 # Disable compiler extensions for the project targets (e.g. use -std=c++17 instead of -std=gnu++17).
 get_property(project_targets DIRECTORY "${PROJECT_SOURCE_DIR}" PROPERTY BUILDSYSTEM_TARGETS)
 set_target_properties(${project_targets} PROPERTIES CXX_EXTENSIONS OFF)
 
 # add the sources
 add_subdirectory(Source)
-set_target_properties("${PANNER_NAME}" PROPERTIES FOLDER "")
+set_target_properties("${PLUGIN_NAME}" PROPERTIES FOLDER "")
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/Source PREFIX "" FILES ${SourceFiles})
 
 add_subdirectory(Resources)
@@ -136,8 +139,8 @@ set_target_properties(Resources PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
 # Not all plugin types (au, vst) available on each build type (win, macos, linux)
 
 foreach(target ${FORMATS} "All")
-    if(TARGET ${PANNER_NAME}_${target})
-        set_target_properties(${PANNER_NAME}_${target} PROPERTIES
+    if(TARGET ${PLUGIN_NAME}_${target})
+        set_target_properties(${PLUGIN_NAME}_${target} PROPERTIES
             # Tuck the actual plugin targets into a folder where they won't bother us
             FOLDER "Targets"
             
@@ -153,14 +156,14 @@ endforeach()
 set_target_properties(Resources PROPERTIES FOLDER "Targets")
 
 # add required flags
-juce_generate_juce_header(${PANNER_NAME})
+juce_generate_juce_header(${PLUGIN_NAME})
 
-target_link_libraries(${PANNER_NAME} PRIVATE juce::juce_audio_basics juce::juce_audio_devices juce::juce_audio_formats juce::juce_audio_plugin_client juce::juce_audio_processors juce::juce_audio_utils juce::juce_core juce::juce_cryptography juce::juce_data_structures juce::juce_dsp juce::juce_events juce::juce_graphics juce::juce_gui_basics juce::juce_gui_extra juce::juce_opengl juce::juce_osc juce::juce_product_unlocking juce_murka)
-target_link_libraries(${PANNER_NAME} PRIVATE Resources PUBLIC juce::juce_recommended_warning_flags juce::juce_recommended_config_flags juce::juce_recommended_lto_flags)
+target_link_libraries(${PLUGIN_NAME} PRIVATE juce::juce_audio_basics juce::juce_audio_devices juce::juce_audio_formats juce::juce_audio_plugin_client juce::juce_audio_processors juce::juce_audio_utils juce::juce_core juce::juce_cryptography juce::juce_data_structures juce::juce_dsp juce::juce_events juce::juce_graphics juce::juce_gui_basics juce::juce_gui_extra juce::juce_opengl juce::juce_osc juce::juce_product_unlocking juce_murka)
+target_link_libraries(${PLUGIN_NAME} PRIVATE Resources PUBLIC juce::juce_recommended_warning_flags juce::juce_recommended_config_flags juce::juce_recommended_lto_flags)
 
 # definitions to replace the `JucePluginDefines.h`
-set(JucePlugin_Name ${PANNER_NAME})
-set(JucePlugin_Desc ${PANNER_NAME})
+set(JucePlugin_Name ${PLUGIN_NAME})
+set(JucePlugin_Desc ${PLUGIN_NAME})
 
 # add M1-SDK
 set(MACH1SPATIAL_LIBS_PATH "Modules/m1-sdk/mach1spatial-libs")
@@ -176,23 +179,23 @@ find_library(MACH1ENCODE_LIBRARY
 )
 set(MACH1SPATIAL_INCLUDES ${MACH1SPATIAL_LIBS_PATH}/linux/include ${MACH1SPATIAL_LIBS_PATH}/linux/include/M1DSP ${MACH1SPATIAL_LIBS_PATH}/xcode/include ${MACH1SPATIAL_LIBS_PATH}/xcode/include/M1DSP ${MACH1SPATIAL_LIBS_PATH}/windows-x86_64/include ${MACH1SPATIAL_LIBS_PATH}/windows-x86_64/include/M1DSP)
 include_directories(${MACH1SPATIAL_INCLUDES})
-target_link_libraries(${PANNER_NAME} PRIVATE ${MACH1ENCODE_LIBRARY})
+target_link_libraries(${PLUGIN_NAME} PRIVATE ${MACH1ENCODE_LIBRARY})
 if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
     add_compile_definitions(M1_STATIC)
     message(STATUS "Adding windows OS flags")
 endif()
-target_sources(${PANNER_NAME} PRIVATE ${MACH1SPATIAL_LIBS_PATH}/xcode/include/Mach1Encode.cpp)
+target_sources(${PLUGIN_NAME} PRIVATE ${MACH1SPATIAL_LIBS_PATH}/xcode/include/Mach1Encode.cpp)
 
 ### IDE Generator post-config ###
 # IDEs:  Move the "shared code" source group (main target) out of the "Targets" folder
 #        to the top level.
-set_target_properties("${PANNER_NAME}" PROPERTIES FOLDER "")
+set_target_properties("${PLUGIN_NAME}" PROPERTIES FOLDER "")
 
 # IDEs:  Organise source file grouping.
-get_target_property(project_sources "${PANNER_NAME}" SOURCES)
+get_target_property(project_sources "${PLUGIN_NAME}" SOURCES)
 
 #   If JuceHeader.h is generated, remove it from the source file list and handle it individually.
-get_target_property(juce_library_code "${PANNER_NAME}" JUCE_GENERATED_SOURCES_DIRECTORY)
+get_target_property(juce_library_code "${PLUGIN_NAME}" JUCE_GENERATED_SOURCES_DIRECTORY)
 set(juce_header "${juce_library_code}/JuceHeader.h")
 list(REMOVE_ITEM project_sources "${juce_header}")
 # remove m1-sdk cpp files too
