--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,4 +1,4 @@
-target_sources(${PANNER_NAME} PRIVATE    Config.h
+target_sources(${PLUGIN_NAME} PRIVATE    Config.h
                                     TypesForDataExchange.h
                                     PluginEditor.cpp
                                     PluginEditor.h
@@ -26,5 +26,5 @@ target_sources(${PANNER_NAME} PRIVATE    Config.h
                                     UI/PannerUIBaseComponent.cpp)
 
 if(APPLE)
-    target_sources(${PANNER_NAME} PRIVATE WindowUtil.mm)
+    target_sources(${PLUGIN_NAME} PRIVATE WindowUtil.mm)
 endif(APPLE)
