--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# MACH1
+installer/config.sh
+m1transcoder/dist
+M1notifier/dist
+* - Notarized*
 *.ttf
 *.otf
+# remove cmake build folder
+/[Bb]uild*/
 
 # JUCE
 Builds
