--- a/Resources/CMakeLists.txt
+++ b/Resources/CMakeLists.txt
@@ -1,16 +1,15 @@
 option(PLUGIN_FONT "Set the plugin's primary text font" "AileronBlack.ttf")
 
 if(EXISTS "Resources/ProximaNovaReg.ttf" AND NOT IS_DIRECTORY "Resources/ProximaNovaReg.ttf")
-	set(LOCAL_FONT ProximaNovaReg)
-	set(LOCAL_FONT_TYPE ttf)
+	set(FOUND_FONT ProximaNovaReg)
+	set(FOUND_FONT_TYPE ttf)
     juce_add_binary_data(Resources NAMESPACE BinaryData SOURCES mach1logo.png bluetooth_icon.png tech_support_icon.png wi-fi_icon.png ProximaNovaReg.ttf)
 else()
-	set(LOCAL_FONT AileronBlack)
-	set(LOCAL_FONT_TYPE ttf)
+	set(FOUND_FONT AileronBlack)
+	set(FOUND_FONT_TYPE ttf)
     juce_add_binary_data(Resources NAMESPACE BinaryData SOURCES mach1logo.png bluetooth_icon.png tech_support_icon.png wi-fi_icon.png AileronBlack.ttf)
 endif()
 
-set(PLUGIN_FONT "${LOCAL_FONT}.${LOCAL_FONT_TYPE}")
-add_compile_definitions(USER_FONT=${LOCAL_FONT} USER_FONT_TYPE=${LOCAL_FONT_TYPE})
-target_compile_definitions(${PLUGIN_NAME} PUBLIC "${PLUGIN_FONT}")
+set(PLUGIN_FONT "${FOUND_FONT}.${FOUND_FONT_TYPE}")
+target_compile_definitions(${PLUGIN_NAME} PUBLIC PLUGIN_FONT="${PLUGIN_FONT}" LOCAL_FONT=${FOUND_FONT} LOCAL_FONT_TYPE=${FOUND_FONT_TYPE} BINARYDATA_FONT=BinaryData::${FOUND_FONT}_${FOUND_FONT_TYPE} BINARYDATA_FONT_SIZE=BinaryData::${FOUND_FONT}_${FOUND_FONT_TYPE}Size)
 message(STATUS "Font: ${PLUGIN_FONT}")
